[gd_scene load_steps=10 format=3 uid="uid://c1qgcoa3fk54u"]

[ext_resource type="Texture2D" uid="uid://cyfkfcncw0b8m" path="res://assets/images/Enemies/Spinner/spinner_dead.png" id="1_bbl37"]
[ext_resource type="Script" path="res://src/Game/Enemies/Spinner/spinner.gd" id="1_eq8dl"]
[ext_resource type="Texture2D" uid="uid://rrk7scun8bbt" path="res://assets/images/Enemies/Spinner/spinner.png" id="2_4aatv"]
[ext_resource type="Texture2D" uid="uid://b3blh7xvnaqy" path="res://assets/images/Enemies/Spinner/spinner_spin.png" id="3_d3pcg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5dim2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bbl37")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4aatv")
}, {
"duration": 1.0,
"texture": ExtResource("3_d3pcg")
}],
"loop": true,
"name": &"spin",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6mln"]
size = Vector2(256, 256)

[sub_resource type="Animation" id="Animation_n31oe"]
resource_name = "Kill"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7g63v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5aljj"]
_data = {
"Kill": SubResource("Animation_n31oe"),
"RESET": SubResource("Animation_7g63v")
}

[node name="Spinner" type="CharacterBody2D" groups=["EnemySpinner"]]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_eq8dl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5dim2")
animation = &"spin"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g6mln")

[node name="WallRay" type="RayCast2D" parent="."]
target_position = Vector2(-140.8, 0)
hit_from_inside = true

[node name="PlayerRay" type="RayCast2D" parent="."]
target_position = Vector2(-1920, 0)
collision_mask = 3
hit_from_inside = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5aljj")
}

[connection signal="player_tracked" from="." to="." method="_on_player_tracked"]
[connection signal="player_tracked_stopped" from="." to="." method="_on_player_tracked_stopped"]
